kubernetes/k8s-deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: golang-reactjs-redux
  labels:
    app: golang-reactjs-redux
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: golang-reactjs-redux
        tier: service
    spec:
      containers:
      - name: golang-reactjs-redux
        image: "zhanat87/golang-reactjs-redux:1.0.0"
        ports:
          - containerPort: 8080
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
        livenessProbe:
          httpGet:
            path: /ping
            port: 8080
          initialDelaySeconds: 5
          timeoutSeconds: 5
        readinessProbe:
          httpGet:
            path: /ping
            port: 8080
          initialDelaySeconds: 5
          timeoutSeconds: 5
